--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,136 +1,16 @@
 stages:
+  - auto_trans
   - build_docs
   - deploy
+  - post_links
 
-# global variables
-variables:
-  ESP_DOCS_ENV_IMAGE: "$CI_DOCKER_REGISTRY/esp-idf-doc-env-v5.0:2-3"
-  ESP_DOCS_PATH: "$CI_PROJECT_DIR"
-
-.build_doc_template:
-  stage: build_docs
-  image: $ESP_DOCS_ENV_IMAGE
+workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  script:
-    - cd $CI_PROJECT_DIR/docs
-    - bash ./check_lang_folder_sync.sh
 
-build_doc_html:
-  extends:
-    - .build_doc_template
-  script:
-    - mkdir -p logs
-    - cd $CI_PROJECT_DIR/docs
-    - pip install -r requirements.txt
-    - ARTIFACT_URL="$CI_JOB_URL/artifacts/external_file/docs/_build/$DOCLANG/$DOCTGT/html/index.html"
-    - build-docs --skip-reqs-check -l $DOCLANG -t $DOCTGT
-    - echo "Documentation preview $ARTIFACT_URL"
-    - cd ..
-    - echo -e "$DOCTGT \t $DOCLANG \t $ARTIFACT_URL" > logs/doc-url-$DOCLANG-$DOCTGT.txt
-  parallel:
-    matrix:
-      - DOCLANG: ["en", "zh_CN"]
-        DOCTGT: ["esp32", "esp32s2", "esp32s3", "esp32c3", "esp32c2", "esp32c6", "esp32h2"]
-  artifacts:
-    when: always
-    paths:
-      - $CI_PROJECT_DIR/docs/_build/*/*/html/*
-      - $CI_PROJECT_DIR/docs/_build/*/*/*.txt
-      - $CI_PROJECT_DIR/logs/doc-url-*.txt
-    expire_in: 4 days
-
-build_doc_pdf:
-  extends:
-    - .build_doc_template
-  script:
-    - cd $CI_PROJECT_DIR/docs
-    - pip install -r requirements.txt
-    - build-docs --skip-reqs-check -bs latex -l $DOCLANG -t $DOCTGT
-  parallel:
-    matrix:
-      - DOCLANG: ["en", "zh_CN"]
-        DOCTGT: ["esp32", "esp32s2", "esp32s3", "esp32c3", "esp32c2", "esp32c6", "esp32h2"]
-  artifacts:
-    when: always
-    paths:
-      - $CI_PROJECT_DIR/docs/_build/*/*/latex/*
-      - $CI_PROJECT_DIR/docs/_build/*/*/*.txt
-    expire_in: 4 days
-
-.deploy_docs_template:
-  stage: deploy
-  image: $ESP_DOCS_ENV_IMAGE
-  tags:
-    - deploy_docs
-  rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  needs:
-    - build_doc_html
-    - build_doc_pdf
-  script:
-    - source ${CI_PROJECT_DIR}/ci/utils.sh
-    - add_doc_server_ssh_keys $DOCS_DEPLOY_PRIVATEKEY $DOCS_DEPLOY_SERVER $DOCS_DEPLOY_SERVER_USER
-    - export GIT_VER=$(git describe --always)
-    - pip install -r ${CI_PROJECT_DIR}/docs/requirements.txt
-    - deploy-docs
-
-deploy_docs_preview:
-  extends:
-    - .deploy_docs_template
-  variables:
-    TYPE: "preview"
-    DOCS_BUILD_DIR: "${CI_PROJECT_DIR}/docs/_build/"
-    DOCS_DEPLOY_PRIVATEKEY: "$DOCS_PREVIEW_DEPLOY_KEY"
-    DOCS_DEPLOY_SERVER: "$DOCS_PREVIEW_SERVER"
-    DOCS_DEPLOY_SERVER_USER: "$DOCS_PREVIEW_SERVER_USER"
-    DOCS_DEPLOY_PATH: "$DOCS_PREVIEW_PATH"
-    DOCS_DEPLOY_URL_BASE: "$DOCS_PREVIEW_URL_BASE"
-
-post_links:
-  stage: deploy
-  tags: [host_test]
-  image: $ESP_DOCS_ENV_IMAGE
-  needs:
-    - build_doc_html
-  rules:
-    # Run for all changes to a merge request's source branch
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-  script:
-    - pip install -r ${CI_PROJECT_DIR}/docs/requirements.txt
-    - ls -l logs
-    - python3 post-mr-note.py $GITLAB_MR_NOTE_TOKEN $CI_PROJECT_PATH $CI_MERGE_REQUEST_IID
-
-#deploy_docs_production:
-#  extends:
-#    - .deploy_docs_template
-#  variables:
-#    TYPE: "production"
-#    DOCS_BUILD_DIR: "${CI_PROJECT_DIR}/docs/_build/"
-#    DOCS_DEPLOY_PRIVATEKEY: "$DOCS_PROD_DEPLOY_KEY"
-#    DOCS_DEPLOY_SERVER: "$DOCS_PROD_SERVER"
-#    DOCS_DEPLOY_SERVER_USER: "$DOCS_PROD_SERVER_USER"
-#    DOCS_DEPLOY_PATH: "$DOCS_PROD_PATH"
-#    DOCS_DEPLOY_URL_BASE: "https://docs.espressif.com/projects/esp-test-tools"
-
-#push_to_github:
-#  stage: deploy
-#  image: $CI_DOCKER_REGISTRY/esp-env-v4.4:1
-#  tags:
-#    - deploy
-#  when: on_success
-#  only:
-#    - master
-#    - /^release\/v/
-#  script:
-#    - mkdir -p ~/.ssh
-#    - chmod 700 ~/.ssh
-#    - echo -n $GH_PUSH_KEY > ~/.ssh/id_rsa_base64
-#    - base64 --decode --ignore-garbage ~/.ssh/id_rsa_base64 > ~/.ssh/id_rsa
-#    - chmod 600 ~/.ssh/id_rsa
-#    - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-#    - git remote remove github &>/dev/null || true
-#    - git remote add github git@github.com:espressif/esp-test-tools.git
-#    - git push github "${CI_COMMIT_SHA}:refs/heads/${CI_COMMIT_REF_NAME}"
+include:
+  - '.gitlab/ci/build_docs.yml'
+  - '.gitlab/ci/deploy.yml'
+  - '.gitlab/ci/auto_trans.yml'
